--- a/StaticPageGenerator/StaticPageGenerator.csproj
+++ b/StaticPageGenerator/StaticPageGenerator.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,7 @@
 	  <PackAsTool>true</PackAsTool>
 	  <ToolCommandName>spg</ToolCommandName>
 	  <PackageOutputPath>./nupkg</PackageOutputPath>
-	  <Version>1.4.1</Version>
+	  <Version>1.4.2</Version>
 	  <PackageId>StaticPageGenerator</PackageId>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
